# lightdm-prologin-greeter

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
archlinux/: .gitignore  PKGBUILD
conf/: lightdm-prologin-greeter.conf  lightdm-prologin-greeter.desktop
devel/: companion.py  fake_prologind.py  lightdm-prologin-greeter.conf  lightdm-prologin-greeter.desktop.in  lightdm.conf.in
src/: KeyboardModel.cc  KeyboardModel.h  ProloGreet.cc  ProloGreet.h  main.cc  res.qrc
src/fallback/: app-mock.js  app.js  login.html  style.css
